[FIX] Align and margin on www

--- a/src/Miit/FrontendBundle/Resources/sass/flex-it/master.scss
+++ b/src/Miit/FrontendBundle/Resources/sass/flex-it/master.scss
@@ -1238,6 +1238,10 @@ click-wave { 0% {
     float: left;
 }
 
+.clearfix {
+  clear: both;
+}
+
 .valign-wrapper {
   display: -webkit-box;
   display: -moz-box;
