--- a/src/Miit/FrontendBundle/Resources/sass/www/master.scss
+++ b/src/Miit/FrontendBundle/Resources/sass/www/master.scss
@@ -59,7 +59,9 @@ h3 {
 	
 	i {
 		float: left;
-		margin-right: 20px,
+		margin-right: 20px;
+		width: 80px;
+		text-align: center;
 	}
 
 	p {
